<resources>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_name">SmartAgenda</string>
    <string name="group">Group</string>
    <string name="personal">Personal</string>
    <string name="leftArrow"><![CDATA[<-]]></string>
    <string name="rightArrow"><![CDATA[->]]></string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="apr_2022">Apr 2022</string>
    <string name="sun">SUN</string>
    <string name="one">1</string>
    <string name="add_event">Add event</string>
    <string name="add_recurring_event">Add recurring event</string>
    <string name="settings">Settings</string>

    <string-array name="days">
        <item> 01 </item>
        <item> 02 </item>
        <item> 03 </item>
        <item> 04 </item>
        <item> 05 </item>
        <item> 06 </item>
        <item> 07 </item>
        <item> 08 </item>
        <item> 09 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>

    </string-array>

    <string-array name="months">
        <item> 01 </item>
        <item> 02 </item>
        <item> 03 </item>
        <item> 04 </item>
        <item> 05 </item>
        <item> 06 </item>
        <item> 07 </item>
        <item> 08 </item>
        <item> 09 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
    </string-array>

    <string-array name="daysList">
        <item> monday </item>
        <item> tuesday </item>
        <item> wednesday </item>
        <item> thursday </item>
        <item> friday </item>
        <item> saturday </item>
        <item> sunday </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="time">
        <item> 01 </item>
        <item> 02 </item>
        <item> 03 </item>
        <item> 04 </item>
        <item> 05 </item>
        <item> 06 </item>
        <item> 07 </item>
        <item> 08 </item>
        <item> 09 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
    </string-array>



</resources>