<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background=""
            android:onClick="previousMonthAction"
            android:text="@string/leftArrow"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/apr_2022"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background=""
            android:onClick="nextMonthAction"
            android:text="@string/rightArrow"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />



    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="516dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="207.5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="gotoGroupCalendar"
            android:text="@string/personal"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/button"
            android:layout_width="207.5dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background=""
            android:onClick="gotoPersonalCalendar"
            android:text="@string/group"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</LinearLayout>









