<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgendaScreenActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/headerTxt1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#9C27B0"
            android:fontFamily="@font/schoolbell"
            android:text="SMART AGENDA"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/accountBtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:background="#00000000"
            android:textAlignment="textEnd"
            android:foreground="@drawable/usericon2"
            android:onClick="onAccountBtn3_Clicked"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="68dp"
            android:layout_height="43dp"
            android:layout_marginTop="3dp"
            android:background="#00000000"
            android:foreground="@drawable/group"
            android:onClick="onGroupBtn_Clicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/headerTxt4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/schoolbell"
        android:text="weekly schedule"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/previousWeekButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:fontFamily="@font/schoolbell"
            android:onClick="previousWeekAction"
            android:text="@string/leftArrow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/monthYearText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/apr_2022"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextWeekButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="nextWeekAction"
            android:text="@string/rightArrow"
            android:fontFamily="@font/schoolbell"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="OnClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:fontFamily="@font/schoolbell"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/thur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />



    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
    </ListView>

    <Button
        android:id="@+id/popupBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_gravity="right"
        android:foreground="@drawable/plus_button"
        android:onClick="onPlusBtn_Clicked"
        tools:ignore="OnClick,SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>









